--- a/pre-01/index.html
+++ b/pre-01/index.html
@@ -78,11 +78,11 @@ n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '1951674821704131');
+fbq('init', '815167766344939');
 fbq('track', 'AddToCart');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=1951674821704131&ev=AddToCart&noscript=1"
+src="https://www.facebook.com/tr?id=815167766344939&ev=AddToCart&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
 
@@ -93,7 +93,7 @@ src="https://www.facebook.com/tr?id=1951674821704131&ev=AddToCart&noscript=1"
       <div id="primeira">
         <div class="question">
           <h1>Pregunta 1</h1>
-          <p>¿Tienes más de 30 años?</p>
+          <p>Este método te enseñará a despertar las 7 hormonas adelgazantes. ¿Quieres conocernos ahora?</p>
         </div>
         <div class="answer">
           <button class="btn" onclick="segunda()">SÍ</button>
@@ -103,7 +103,7 @@ src="https://www.facebook.com/tr?id=1951674821704131&ev=AddToCart&noscript=1"
       <div id="segunda" class="hide">
         <div class="question">
           <h1>Pregunta 2</h1>
-          <p>Este método te enseñará a despertar las 7 hormonas adelgazantes. ¿Quieres conocernos ahora?</p>
+          <p>¿Tienes más de 29 años?</p>
         </div>
         <div class="answer">
           <button class="btn" onclick="terceira()">SÍ</button>
@@ -112,8 +112,8 @@ src="https://www.facebook.com/tr?id=1951674821704131&ev=AddToCart&noscript=1"
       </div>
       <div id="terceira" class="hide">
         <div class="question">
-          <h1>Pregunta 3</h1>
-          <p>Todo está listo. Ahora haga clic en sí si tiene la intención de ver hasta el final.</p>
+          <h1>Tercera y última pregunta:</h1>
+          <p>El número de personas que pueden asistir es limitado. ¿TIENES LA INTENCIÓN DE VER EL FINAL?</p>
         </div>
         <div class="answer">
           <button class="btn" onclick="redirect()">SÍ</button>
@@ -134,7 +134,7 @@ src="https://www.facebook.com/tr?id=1951674821704131&ev=AddToCart&noscript=1"
       document.getElementById("terceira").classList.remove("hide")
     }
     function redirect() {
-      location.href = "https://manuelagutierrez.online/" // SEU LINK AQUI
+      location.href = "https://zaraferraz.online/" // SEU LINK AQUI
     }
   </script>
 </body>
