--- a/pre-011/index.html
+++ b/pre-011/index.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<title>protocolo de peso perfecto</title>
 <head>
-
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="shortcut icon" href="favicon.jpg">
-<style>
-    header {
-      background:"headerbg2.png";
-      background-repeat: no-repeat;
-    }
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <style>
     @font-face {
       font-family: Gotham Rounded;
       src: url("font.otf") format("opentype");
@@ -28,7 +21,7 @@
       align-items: center;
       width: 100vw;
       height: 100vh;
-      background: url("fundo.png");
+      background: url("fundo.jpg");
       background-size: cover;
       background-repeat: no-repeat;
     }
@@ -37,11 +30,11 @@
       max-width: 90%;
     }
     .black {
-      background-color: black;
+      background-color: white;
       padding: 10px;
       text-align: center;
       border-radius: 20px;
-      box-shadow: 0 0 10px 2px black;
+      box-shadow: 0 0 10px 2px;
     }
     .answer {
       display: grid;
@@ -65,11 +58,10 @@
       color: black;
     }
     .black h1 {
-      color: yellow;
+      color: black;
     }
     .black p {
       font-size: 18px;
-      color: white;
     }
     .hide {
       display: none;
@@ -95,44 +87,44 @@ src="https://www.facebook.com/tr?id=1951674821704131&ev=AddToCart&noscript=1"
 <!-- End Meta Pixel Code -->
 
 </head>
-<body>
-
-<div class="container">
-<div class="black">
-<div id="primeira">
-<div class="question">
-<h1>Pregunta 1</h1>
-<p>¿Quieres conocer el método para despertar las 7 hormonas adelgazantes en tu cuerpo?</p>
-</div>
-<div class="answer">
-<button class="btn" onclick="segunda()">SÍ</button>
-<button class="btn" onclick="segunda()">NO</button>
-</div>
-</div>
-<div id="segunda" class="hide">
-<div class="question">
-<h1>Pregunta 2</h1>
-<p>¿Ha utilizado algún método para bajar de peso?</p>
-</div>
-<div class="answer">
-<button class="btn" onclick="terceira()">SÍ</button>
-<button class="btn" onclick="terceira()">NO</button>
-</div>
-</div>
-<div id="terceira" class="hide">
-<div class="question">
-<h1>Pregunta 3</h1>
-<p>El video tiene un límite de personas para verlo al mismo tiempo... Tienes la intención de verlo hasta el final?</p>
-</div>
-<div class="answer">
-<button class="btn" onclick="redirect()">SÍ</button>
-<button class="btn" onclick="redirect()">NO</button>
-</div>
-</div>
-</div>
-<p style="text-align: center; font-weight: bold;">© 2022 - Todos los derechos reservados. Este sitio web no está afiliado a Facebook ni a ninguna entidad de Facebook.</p>
-</div>
-<script>
+<body> 
+  <div class="container">
+    <div class="black">
+      <div id="primeira">
+        <div class="question">
+          <h1>Primera pregunta:</h1>
+          <p>Este método te enseñará a despertar las 7 hormonas adelgazantes. ¿Quieres conocernos ahora?</p>
+        </div>
+        <div class="answer">
+          <button class="btn" onclick="segunda()">SÍ</button>
+          <button class="btn" onclick="segunda()">NO</button>
+        </div>
+      </div>
+      <div id="segunda" class="hide">
+        <div class="question">
+          <h1>Segunda pregunta:</h1>
+          <p>¿Tienes más de 30 años?</p>
+        </div>
+        <div class="answer">
+          <button class="btn" onclick="terceira()">SÍ</button>
+          <button class="btn" onclick="terceira()">NO</button>
+        </div>
+      </div>
+      <div id="terceira" class="hide">
+        <div class="question">
+          <h1>Tercera y última pregunta:</h1>
+          <p>El número de personas que pueden asistir es limitado. ¿TIENES LA INTENCIÓN DE VER EL FINAL?</p>
+        </div>
+        <div class="answer">
+          <button class="btn" onclick="redirect()">SÍ</button>
+          <button class="btn" onclick="redirect()">NO</button>
+        </div>
+      </div>
+    </div>
+    <p style="text-align: center; font-weight: bold;">© 2022 - Todos los derechos reservados. Este sitio web no está afiliado a Facebook ni a ninguna entidad de Facebook.</p>
+    <p style="text-align: center; font-weight: bold;"><a href="https://protocolozerobarriga.com/termos" style="color: black;">Terminos de uso</a> | <a href="https://protocolozerobarriga.com/privacidade" style="color: black;">políticas de privacidad</a></p>
+  </div>
+  <script>
     function segunda() {
       document.getElementById("primeira").classList.add("hide")
       document.getElementById("segunda").classList.remove("hide")
@@ -142,7 +134,7 @@ src="https://www.facebook.com/tr?id=1951674821704131&ev=AddToCart&noscript=1"
       document.getElementById("terceira").classList.remove("hide")
     }
     function redirect() {
-      location.href = "https://manuelagutierrez.online/" 
+      location.href = "https://manuelagutierrez.online/" // SEU LINK AQUI
     }
   </script>
 </body>
