--- a/pre-01/index.html
+++ b/pre-01/index.html
@@ -78,11 +78,11 @@ n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '1951674821704131');
-fbq('track', 'AddToCart');
+fbq('init', '1564152120711234');
+fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=1951674821704131&ev=AddToCart&noscript=1"
+src="https://www.facebook.com/tr?id=1564152120711234&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
 
