--- a/pre-01/index.html
+++ b/pre-01/index.html
@@ -79,10 +79,10 @@ t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
 fbq('init', '1564152120711234');
-fbq('track', 'PageView');
+fbq('track', 'AddToCart');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=1564152120711234&ev=PageView&noscript=1"
+src="https://www.facebook.com/tr?id=1564152120711234&ev=AddToCart&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
 
